Implement initial posts functionality

--- a/src/EchoSphere.Web/Components/Layout/MainLayout.razor
+++ b/src/EchoSphere.Web/Components/Layout/MainLayout.razor
@@ -11,8 +11,11 @@
 		<MudAppBar Color="Color.Primary">
 			<MudNavLink Href="users">Users</MudNavLink>
 			<MudNavLink Href="friendInvites">Invites</MudNavLink>
+			<MudNavLink Href="followers">Followers</MudNavLink>
 			<MudNavLink Href="friends">Friends</MudNavLink>
 			<MudNavLink Href="chats">Chats</MudNavLink>
+			<MudNavLink Href="posts/me">My posts</MudNavLink>
+			<MudNavLink Href="newPost">New post</MudNavLink>
 		</MudAppBar>
 		<MudMainContent>
 			@Body
