--- a/src/EchoSphere.Web/Components/UsersPage.razor
+++ b/src/EchoSphere.Web/Components/UsersPage.razor
@@ -7,8 +7,10 @@
 
 @inject IUserProfileClient UserProfileClient;
 @inject IFriendClient FriendClient;
+@inject IFollowClient FollowClient;
 @inject LongOperationExecutor LongOperationExecutor;
 @inject AuthenticationStateProvider AuthenticationStateProvider;
+@inject NavigationManager NavigationManager;
 
 <div>
 	@foreach (var userProfile in _userProfiles)
@@ -23,6 +25,12 @@
 			{
 				<MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="() => SendFriendInvite(userProfile.Id)">
 					Send friend invite
+				</MudButton>
+				<MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="() => FollowUser(userProfile.Id)">
+					Follow
+				</MudButton>
+				<MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="() => NavigateToUserPosts(userProfile.Id)">
+					View posts
 				</MudButton>
 			}
 		</div>
@@ -46,5 +54,16 @@
 	{
 		return LongOperationExecutor.ExecuteLongOperation(
 			() => FriendClient.SendFriendInvite(toUser, CancellationToken.None));
+	}
+
+	private Task FollowUser(Guid followUserId)
+	{
+		return LongOperationExecutor.ExecuteLongOperation(
+			() => FollowClient.Follow(followUserId, CancellationToken.None));
+	}
+
+	private void NavigateToUserPosts(Guid userId)
+	{
+		NavigationManager.NavigateTo($"/posts/{userId}");
 	}
 }
