feat(Notifications): Implement basic notifications api

--- a/src/EchoSphere.Web/Components/Layout/MainLayout.razor
+++ b/src/EchoSphere.Web/Components/Layout/MainLayout.razor
@@ -16,6 +16,7 @@
 			<MudNavLink Href="chats">Chats</MudNavLink>
 			<MudNavLink Href="posts/me">My posts</MudNavLink>
 			<MudNavLink Href="newPost">New post</MudNavLink>
+			<MudNavLink Href="notifications">Notifications</MudNavLink>
 		</MudAppBar>
 		<MudMainContent>
 			@Body
