feat(Web app): Migrate web app to web assembly

--- a/src/EchoSphere.Web.Client/Components/FollowersPage.razor
+++ b/src/EchoSphere.Web.Client/Components/FollowersPage.razor
@@ -29,7 +29,7 @@
 		_followers = await followerIds.ToAsyncEnumerable()
 			.SelectAwait(fromUserId =>
 				new ValueTask<UserProfileDtoV1>(LongOperationExecutor.ExecuteLongOperationAndReturnDefaultIfError(
-					() => UserProfileClient.GetUserProfile(fromUserId, CancellationToken.None), null!)))
+					() => UserProfileClient.GetUserProfile(fromUserId.ToString(), CancellationToken.None), null!)))
 			.ToArrayAsync();
 	}
 
