--- a/src/EchoSphere.Web.Client/Components/_Imports.razor
+++ b/src/EchoSphere.Web.Client/Components/_Imports.razor
@@ -5,10 +5,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.OutputCaching
 @using Microsoft.JSInterop
 @using EchoSphere.BlazorShared.Components
-@using EchoSphere.Web
-@using EchoSphere.Web.Components
+@using EchoSphere.Web.Client
 @using EchoSphere.Web.Client.Components
 @using MudBlazor
