--- a/src/EchoSphere.Web/Components/App.razor
+++ b/src/EchoSphere.Web/Components/App.razor
@@ -1,9 +1,9 @@
 ﻿@{
-	var renderMode = InteractiveServer;
+	var renderMode = InteractiveWebAssemblyWithoutPrerender;
 }
 
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -17,16 +17,16 @@
 	<Routes @rendermode="renderMode"/>
 	<script src="/_framework/blazor.web.js" autostart="false"></script>
 	<script>
-		Blazor.start({
-			webAssembly: {
-				loadBootResource: function (type, name, defaultUri, integrity) {
-					return defaultUri.startsWith('http://') || defaultUri.startsWith('https://')
-						? defaultUri
-						: '/' + defaultUri;
+			Blazor.start({
+				webAssembly: {
+					loadBootResource: function (type, name, defaultUri, integrity) {
+						return defaultUri.startsWith('http://') || defaultUri.startsWith('https://')
+							? defaultUri
+							: '/' + defaultUri;
+					}
 				}
-			}
-		});
-	</script>
+			});
+		</script>
 	<script src="/_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 </html>
@@ -36,5 +36,6 @@
 	private static readonly InteractiveWebAssemblyRenderMode InteractiveWebAssemblyWithoutPrerender = new(false);
 	private static readonly InteractiveAutoRenderMode InteractiveAutoWithoutPrerender = new(false);
 
-	[CascadingParameter] public HttpContext HttpContext { get; set; } = null!;
+	[CascadingParameter]
+	public HttpContext HttpContext { get; set; } = null!;
 }
