feat(Web app): Initial UI

--- a/src/EchoSphere.Web.Client/Components/HomePage.razor
+++ b/src/EchoSphere.Web.Client/Components/HomePage.razor
@@ -3,5 +3,11 @@
 
 @attribute [Authorize]
 
+@inject NavigationManager NavigationManager;
+
 @code {
+	protected override void OnInitialized()
+	{
+		NavigationManager.NavigateTo("/profile/me");
+	}
 }
