--- a/src/EchoSphere.Web/Components/App.razor
+++ b/src/EchoSphere.Web/Components/App.razor
@@ -8,8 +8,13 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<base href="@HttpContext.Request.PathBase/"/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/_content/MudBlazor/MudBlazor.min.css"/>
 	<link rel="stylesheet" href="/app.css"/>
+	<link rel="stylesheet" href="/EchoSphere.Web.styles.css"/>
 	<HeadOutlet @rendermode="renderMode"/>
 </head>
 
